external-projects/sui-prover/crates/sui-prover/tests/snapshots/quantifiers/funs_aborts.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 274
expression: output
---
exiting with bytecode transformation errors
error: Pure functions cannot abort
   ┌─ tests/inputs/quantifiers/funs_aborts.fail.move:10:5
   │
10 │     assert!(x == 10); // function can abort
   │     ^^^^^^^^^^^^^^^^
